tests/fixtures/realworld/istio/valid/case-007-RW-8-7-VirtualService-valid-with-fault-injection.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: fault-inject-route
  namespace: default
spec:
  hosts:
  - reviews
  http:
  - fault:
      delay:
        percentage:
          value: 10
        fixedDelay: 5s
    route:
    - destination:
        host: reviews
        subset: v1
